--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fideligard Investments</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="styles/styles.css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -14,15 +14,56 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
   </head>
   <body ng-cloak>
-    <a ui-sref="index.portfolio">Portfolio</a>
-    <a ui-sref="index.transactions">Transactions</a>
-    <a ui-sref="index.trade">Trade</a>
 
-    <h1>Main Header<span ui-view="main-header"></span></h1>
+    <nav class="navbar navbar-default" id='main-nav'>
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" ui-sref='index.portfolio'>Fideligard</a>
+        </div>
 
-    <div ui-view="date-picker"></div>
-    <div ui-view="stock-panel"></div>
-    <div ui-view="main-panel"></div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a ui-sref="index.portfolio">Portfolio</a></li>
+            <li><a ui-sref="index.transactions">Transactions</a></li>
+            <li><a ui-sref="index.trade">Trade</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-xs-4">
+          <div ui-view="stock-panel"></div>
+        </div>
+
+        <div class="col-xs-8">
+          <div class="row">
+            <div class="col-xs-12">
+              <div ui-view="date-picker"></div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-12">
+              <div ui-view="main-panel"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+
+
 
     <script src="js/app.js"></script>
   </body>
