--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <title>Fideligard Investments</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="vendor/jQRangeSlider-5.7.2/css/iThing-min.css">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <!--  Date Slider -->
+    <link rel="stylesheet" id="themeCSS" href="/vendor/jQRangeSlider-5.7.2/css/classic.css">
+    <link rel="stylesheet" href="/vendor/jQRangeSlider-5.7.2/demo/style.css">
+
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
+    <script src="/vendor/jQRangeSlider-5.7.2/lib/jquery.mousewheel.min.js"></script>
+
+    <script src="/vendor/jQRangeSlider-5.7.2/jQAllRangeSliders-min.js"></script>
+
+
+    <script src="/vendor/jQRangeSlider-5.7.2/demo/sliderDemo.js"></script>
+    <script src="/vendor/jQRangeSlider-5.7.2/demo/dateSliderDemo.js"></script>
+    <script src="/vendor/jQRangeSlider-5.7.2/demo/editSliderDemo.js"></script>
+    <script src="/vendor/jQRangeSlider-5.7.2/demo/demo.js"></script>
+
+    <!-- bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
   </head>
@@ -60,7 +79,7 @@
           </div>
         </div>
       </div>
-      
+
     </div>
 
 
