--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <!--  Date Slider -->
-    <link rel="stylesheet" id="themeCSS" href="/vendor/jQRangeSlider-5.7.2/css/classic.css">
+    <link rel="stylesheet" id="themeCSS" href="/vendor/jQRangeSlider-5.7.2/css/iThing.css">
     <link rel="stylesheet" href="/vendor/jQRangeSlider-5.7.2/demo/style.css">
 
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
-    <script src="/vendor/jQRangeSlider-5.7.2/lib/jquery.mousewheel.min.js"></script>
+    
+    <script src="/vendor/jQRangeSlider-5.7.2/demo/lib/jquery-ui/js/jquery-ui-1.8.16.custom.min.js"></script>
+    <script src="/vendor/jQRangeSlider-5.7.2/jQEditRangeSlider-withRuler-min.js"></script>
 
-    <script src="/vendor/jQRangeSlider-5.7.2/jQAllRangeSliders-min.js"></script>
+<!--     <script src="/vendor/jQRangeSlider-5.7.2/lib/jquery.mousewheel.min.js"></script>
 
-
-    <script src="/vendor/jQRangeSlider-5.7.2/demo/sliderDemo.js"></script>
+    <script src="/vendor/jQRangeSlider-5.7.2/jQAllRangeSliders-min.js"></script> -->
+<!--     <script src="/vendor/jQRangeSlider-5.7.2/demo/sliderDemo.js"></script>
     <script src="/vendor/jQRangeSlider-5.7.2/demo/dateSliderDemo.js"></script>
     <script src="/vendor/jQRangeSlider-5.7.2/demo/editSliderDemo.js"></script>
     <script src="/vendor/jQRangeSlider-5.7.2/demo/demo.js"></script>
-
+ -->
     <!-- bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
