--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/vendor/jQRangeSlider-5.7.2/demo/style.css">
 
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
-    
+
     <script src="/vendor/jQRangeSlider-5.7.2/demo/lib/jquery-ui/js/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="/vendor/jQRangeSlider-5.7.2/jQEditRangeSlider-withRuler-min.js"></script>
 
@@ -87,5 +87,6 @@
 
 
     <script src="js/app.js"></script>
+    <script src="js/controllers/DatePickerCtrl.js"></script>
   </body>
 </html>
