--- a/index.html
+++ b/index.html
@@ -88,5 +88,6 @@
 
     <script src="js/app.js"></script>
     <script src="js/controllers/DatePickerCtrl.js"></script>
+    <script src="js/services/dateService.js"></script>
   </body>
 </html>
