mvp date picker

--- a/index.html
+++ b/index.html
@@ -20,14 +20,6 @@
     <script src="/vendor/jQRangeSlider-5.7.2/demo/lib/jquery-ui/js/jquery-ui-1.8.16.custom.min.js"></script>
     <script src="/vendor/jQRangeSlider-5.7.2/jQEditRangeSlider-withRuler-min.js"></script>
 
-<!--     <script src="/vendor/jQRangeSlider-5.7.2/lib/jquery.mousewheel.min.js"></script>
-
-    <script src="/vendor/jQRangeSlider-5.7.2/jQAllRangeSliders-min.js"></script> -->
-<!--     <script src="/vendor/jQRangeSlider-5.7.2/demo/sliderDemo.js"></script>
-    <script src="/vendor/jQRangeSlider-5.7.2/demo/dateSliderDemo.js"></script>
-    <script src="/vendor/jQRangeSlider-5.7.2/demo/editSliderDemo.js"></script>
-    <script src="/vendor/jQRangeSlider-5.7.2/demo/demo.js"></script>
- -->
     <!-- bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
@@ -38,7 +30,6 @@
 
     <nav class="navbar navbar-default" id='main-nav'>
       <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -56,8 +47,8 @@
             <li><a ui-sref="index.transactions">Transactions</a></li>
             <li><a ui-sref="index.trade">Trade</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
+        </div>
+      </div>
     </nav>
 
     <div class="container">
