--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
 
 
     <script src="js/app.js"></script>
+
+    <!-- controllers -->
     <script src="js/controllers/DatePickerCtrl.js"></script>
+    <script src="js/controllers/StockPanelCtrl.js"></script>
+
+    <!-- services -->
     <script src="js/services/dateService.js"></script>
+    <script src="js/services/stockService.js"></script>
   </body>
 </html>
