--- a/index.html
+++ b/index.html
@@ -6,23 +6,17 @@
     <title>Fideligard Investments</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="vendor/jQRangeSlider-5.7.2/css/iThing-min.css">
 
+    <!-- lodash -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
 
+    <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-    <!--  Date Slider -->
-    <link rel="stylesheet" id="themeCSS" href="/vendor/jQRangeSlider-5.7.2/css/iThing.css">
-    <link rel="stylesheet" href="/vendor/jQRangeSlider-5.7.2/demo/style.css">
-
-    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
-
-    <script src="/vendor/jQRangeSlider-5.7.2/demo/lib/jquery-ui/js/jquery-ui-1.8.16.custom.min.js"></script>
-    <script src="/vendor/jQRangeSlider-5.7.2/jQEditRangeSlider-withRuler-min.js"></script>
 
     <!-- bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+    <!-- angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
   </head>
