--- a/index.html
+++ b/index.html
@@ -76,9 +76,15 @@
     <!-- controllers -->
     <script src="js/controllers/DatePickerCtrl.js"></script>
     <script src="js/controllers/StockPanelCtrl.js"></script>
+    <script src="js/controllers/TradeCtrl.js"></script>
 
     <!-- services -->
     <script src="js/services/dateService.js"></script>
     <script src="js/services/stockService.js"></script>
+    <script src="js/services/helpers.js"></script>
+
+    <!-- directives -->
+    <script src="js/directives/tradeFormDirective.js"></script>
+
   </body>
 </html>
