working trade e form

--- a/index.html
+++ b/index.html
@@ -77,14 +77,18 @@
     <script src="js/controllers/DatePickerCtrl.js"></script>
     <script src="js/controllers/StockPanelCtrl.js"></script>
     <script src="js/controllers/TradeCtrl.js"></script>
+    <script src="js/controllers/TransactionCtrl.js"></script>
 
     <!-- services -->
     <script src="js/services/dateService.js"></script>
     <script src="js/services/stockService.js"></script>
+    <script src="js/services/transactionService.js"></script>
     <script src="js/services/helpers.js"></script>
+    <script src="js/services/lodash.js"></script>
 
     <!-- directives -->
     <script src="js/directives/tradeFormDirective.js"></script>
+    <script src="js/directives/panelHeadingDirective.js"></script>
 
   </body>
 </html>
