first draft portoflio

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <script src="js/controllers/StockPanelCtrl.js"></script>
     <script src="js/controllers/TradeCtrl.js"></script>
     <script src="js/controllers/TransactionCtrl.js"></script>
+    <script src="js/controllers/PortfolioCtrl.js"></script>
 
     <!-- services -->
     <script src="js/services/dateService.js"></script>
