checks on transactions

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <script src="js/services/dateService.js"></script>
     <script src="js/services/stockService.js"></script>
     <script src="js/services/transactionService.js"></script>
+    <script src="js/services/portfolioService.js"></script>
     <script src="js/services/helpers.js"></script>
     <script src="js/services/lodash.js"></script>
 
